--- a/wip/documentation/index.html
+++ b/wip/documentation/index.html
@@ -11,39 +11,71 @@
         <body>
             <aside>
                 <ul class="sideNav">
-                    <li> <h2>General</h2> </li>
-                    <a class="selected" href=""> <li>Overview</li> </a>
-                    <li> <h2>Interface</h2> </li>
+                    <li><h2>General</h2></li>
+                    <a class="selected" href=""><li>Overview</li></a>
+                    <li><h2>Interface</h2></li>
                     <a href="toolbar/"><li>Toolbar</li></a>
-                    <a href="song-panel/"><li>Song Panel</li></a>
-                    <a href="edit-settings/"> <li>Edit Settings</li> </a>
-                    <a href="frames-panel/"> <li>Frames Panel</li> </a>
-                    <a href="wave-bank/"> <li>Wave Bank</li> </a>
-                    <a href="instrument-bank/"> <li>Instrument Bank</li> </a>
-                    <a href="instrument-editor/"> <li>Instrument Editor</li> </a>
-                    <a href="pattern-editor/"> <li>Pattern Editor</li> </a>
-                    <a href="preferences/"> <li>Preferences</li> </a>
-                    <a href="visualizer-mode/"> <li>Visualizer Mode</li> </a>
-                    <li> <h2>Reference</h2> </li>
-                    <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
-                    <a href="effect-list/"> <li>Effect List</li> </a>
+                    <a href="module-panel/"><li>Module Panel</li></a>
+                    <a href="edit-settings/"><li>Edit Settings</li></a>
+                    <a href="frames-panel/"><li>Frames Panel</li></a>
+                    <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="instrument-bank/"><li>Instrument Bank</li></a>
+                    <a href="instrument-editor/"><li>Instrument Editor</li></a>
+                    <a href="pattern-editor/"><li>Pattern Editor</li></a>
+                    <a href="preferences/"><li>Preferences</li></a>
+                    <a href="visualizer-mode/"><li>Visualizer Mode</li></a>
+                    <li><h2>Reference</h2></li>
+                    <a href="keyboard-shortcuts/"><li>Keyboard Shortcuts</li></a>
+                    <a href="effect-list/"><li>Effect List</li></a>
                 </ul>
             </aside>
             <article>
                 <h1 class="topic">Overview</h1>
                 <hr />
                 <br />
-                <p>
-                    This is the official documentation for <a href="../">WaveTracker</a>. WaveTracker is a tracker for
-                    making chiptune music. There are up to 24 channels, up to 100 customizable waves, and up to 100
-                    customizable instrument macros.
-                </p>
                 <img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
-
+                <p>
+                    This is the official documentation for
+                    <a href="../">WaveTracker</a>. WaveTracker is a tracker for making chiptune music, which can then be
+                    exported to .wav format.
+                </p>
+                <h2>Features</h2>
+                <ul>
+                    <li>Realtime playback and editing</li>
+                    <li>Draw and edit up to 100 waveforms</li>
+                    <li>Up to 100 instrument macros to control various aspects of the sound</li>
+                    <li>Sample importing and editing</li>
+                    <li>MIDI input</li>
+                    <li>Export to .wav</li>
+                    <li>Built in oscilloscope and piano roll visualizer</li>
+                </ul>
+                <br />
+                <h2>Help Topics</h2>
+                <p>For more information, see the topics below:</p>
+                <ul>
+                    <h3 style="margin-bottom: 0">Interface</h3>
+                    <ul>
+                        <li><a href="toolbar/">Toolbar</a></li>
+                        <li><a href="module-panel/">Module Panel</a></li>
+                        <li><a href="edit-settings/">Edit Settings</a></li>
+                        <li><a href="frames-panel/">Frames Panel</a></li>
+                        <li><a href="wave-bank/">Wave Bank</a></li>
+                        <li><a href="instrument-bank/">Instrument Bank</a></li>
+                        <li><a href="instrument-editor/">Instrument Editor</a></li>
+                        <li><a href="pattern-editor/">Pattern Editor</a></li>
+                        <li><a href="preferences/">Preferences</a></li>
+                        <li><a href="visualizer-mode/">Visualizer Mode</a></li>
+                    </ul>
+                    <h3 style="margin-bottom: 0">Reference</h3>
+                    <ul>
+                        <li><a href="keyboard-shortcuts/">Keyboard Shortcuts</a></li>
+                        <li><a href="effect-list/">Effect List</a></li>
+                    </ul>
+                </ul>
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    WaveTracker is Copyright © 2024 squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
