--- a/wip/index.html
+++ b/wip/index.html
@@ -22,7 +22,8 @@
                     title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                    allowfullscreen
+                ></iframe>
                 <nav>
                     <!-- <a class="button" href="https://squiggygames.itch.io/">Download on itch.io</a> -->
                 </nav>
@@ -43,32 +44,35 @@
                             <img
                                 src="drawing_wave.gif"
                                 title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen" />
+                                alt="WaveTracker's main screen"
+                            />
                             <p>Create up to 100 different custom waves with easy-to-use tools.</p>
                         </div>
 
                         <div class="image_wrapper">
-                            <h3>24 Sound Channels</h3>
+                            <h3>Quick & Easy Editing</h3>
                             <img src="tracking.gif" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
-                            <p>Up to 24 independent channels with a clean tracker interface and versatile effects.</p>
+                            <p>Use either the keyboard or a MIDI controller to quickly write chiptune music.</p>
                         </div>
                         <div class="image_wrapper">
                             <h3>Create Custom Instruments</h3>
                             <img
                                 src="envelope_editing.gif"
                                 title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen" />
-                            <p
-                                >Define up to 100 custom instrument macros with volume, arpeggio, pitch and timbre
-                                controls.</p
-                            >
+                                alt="WaveTracker's main screen"
+                            />
+                            <p>
+                                Define up to 100 custom instrument macros with volume, arpeggio, pitch and timbre
+                                controls.
+                            </p>
                         </div>
                         <div class="image_wrapper">
                             <h3>Import and Edit Samples</h3>
                             <img
                                 src="importing_samples.gif"
                                 title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen" />
+                                alt="WaveTracker's main screen"
+                            />
                             <p>Import any .wav or .mp3 file to use in your songs.</p>
                         </div>
                         <div class="image_wrapper">
@@ -76,19 +80,21 @@
                             <img
                                 src="visualizer_mode.gif"
                                 title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen" />
-                            <p
-                                >See your song with the click of a button via a built-in piano roll and oscilloscope
-                                visualizer.</p
-                            >
+                                alt="WaveTracker's main screen"
+                            />
+                            <p>
+                                See your song with the click of a button via a built-in piano roll and oscilloscope
+                                visualizer.
+                            </p>
                         </div>
                         <div class="image_wrapper">
                             <h3>Advanced Modulation Effects</h3>
                             <img
-                                src="exporting.gif"
+                                src="advanced_modulation.gif"
                                 title="WaveTracker's main screen"
-                                alt="WaveTracker's main screen" />
-                            <p>Easily export any selection of channels to 44.1khz wav format.</p>
+                                alt="WaveTracker's main screen"
+                            />
+                            <p>Stretch, blend, and modulate waves with one another.</p>
                         </div>
                     </div>
 
