--- a/wip/documentation/edit-settings/index.html
+++ b/wip/documentation/edit-settings/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <html lang="en">
-
         <head>
             <title>Edit Settings - WaveTracker</title>
             <base href="../" />
@@ -13,22 +12,22 @@
         <body>
             <aside>
                 <ul class="sideNav">
-                    <li> <h2>General</h2> </li>
-                    <a href=""> <li>Overview</li> </a>
-                    <li> <h2>Interface</h2> </li>
+                    <li><h2>General</h2></li>
+                    <a href=""><li>Overview</li></a>
+                    <li><h2>Interface</h2></li>
                     <a href="toolbar/"><li>Toolbar</li></a>
-                    <a href="song-panel/"><li>Song Panel</li></a>
-                    <a class="selected" href="edit-settings/"> <li>Edit Settings</li> </a>
-                    <a href="frames-panel/"> <li>Frames Panel</li> </a>
-                    <a href="wave-bank/"> <li>Wave Bank</li> </a>
-                    <a  href="instrument-bank/"> <li>Instrument Bank</li> </a>
-                    <a href="instrument-editor/"> <li>Instrument Editor</li> </a>
-                    <a href="pattern-editor/"> <li>Pattern Editor</li> </a>
-                    <a href="preferences/"> <li>Preferences</li> </a>
-                    <a href="visualizer-mode/"> <li>Visualizer Mode</li> </a>
-                    <li> <h2>Reference</h2> </li>
-                    <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
-                    <a href="effect-list/"> <li>Effect List</li> </a>
+                    <a href="module-panel/"><li>Module Panel</li></a>
+                    <a class="selected" href="edit-settings/"><li>Edit Settings</li></a>
+                    <a href="frames-panel/"><li>Frames Panel</li></a>
+                    <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="instrument-bank/"><li>Instrument Bank</li></a>
+                    <a href="instrument-editor/"><li>Instrument Editor</li></a>
+                    <a href="pattern-editor/"><li>Pattern Editor</li></a>
+                    <a href="preferences/"><li>Preferences</li></a>
+                    <a href="visualizer-mode/"><li>Visualizer Mode</li></a>
+                    <li><h2>Reference</h2></li>
+                    <a href="keyboard-shortcuts/"><li>Keyboard Shortcuts</li></a>
+                    <a href="effect-list/"><li>Effect List</li></a>
                 </ul>
             </aside>
             <article>
@@ -36,12 +35,17 @@
                 <hr />
                 <br />
                 <p>
-                    The edit settings panel is located in the top-middle of the main screen, between the <a
-                        href="wave-bank/">wave bank</a> and
-                    <a href="song-panel/">song panel</a>.
+                    The edit settings panel is located in the top-middle of the main screen, between the
+                    <a href="wave-bank/">wave bank</a>
+                    and
+                    <a href="song-panel/">song panel</a>
+                    .
                 </p>
-                <img src="edit-settings/edit_settings.png" title="The edit settings panel"
-                    alt="The edit settings panel" />
+                <img
+                    src="edit-settings/edit_settings.png"
+                    title="The edit settings panel"
+                    alt="The edit settings panel"
+                />
                 <p>The settings are as follows:</p>
                 <table border="1" cellpadding="3px" class="panel">
                     <tr valign="top">
@@ -53,9 +57,7 @@
                     </tr>
                     <tr>
                         <td style="padding-left: 20px">Octave</td>
-                        <td>
-                            Determines what octave newly inputted notes will be.
-                        </td>
+                        <td>Determines what octave newly inputted notes will be.</td>
                     </tr>
                     <tr>
                         <td style="padding-left: 20px">Step</td>
@@ -87,13 +89,11 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    WaveTracker is Copyright © 2024 squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
             </article>
         </body>
-
     </html>
-
 </html>
