--- a/wip/documentation/visualizer-mode/index.html
+++ b/wip/documentation/visualizer-mode/index.html
@@ -11,22 +11,22 @@
         <body>
             <aside>
                 <ul class="sideNav">
-                    <li> <h2>General</h2> </li>
-                    <a href=""> <li>Overview</li> </a>
-                    <li> <h2>Interface</h2> </li>
+                    <li><h2>General</h2></li>
+                    <a href=""><li>Overview</li></a>
+                    <li><h2>Interface</h2></li>
                     <a href="toolbar/"><li>Toolbar</li></a>
-                    <a href="song-panel/"><li>Song Panel</li></a>
-                    <a href="edit-settings/"> <li>Edit Settings</li> </a>
-                    <a href="frames-panel/"> <li>Frames Panel</li> </a>
-                    <a href="wave-bank/"> <li>Wave Bank</li> </a>
-                    <a href="instrument-bank/"> <li>Instrument Bank</li> </a>
-                    <a href="instrument-editor/"> <li>Instrument Editor</li> </a>
-                    <a href="pattern-editor/"> <li>Pattern Editor</li> </a>
-                    <a href="preferences/"> <li>Preferences</li> </a>
-                    <a class="selected" href="visualizer-mode/"> <li>Visualizer Mode</li> </a>
-                    <li> <h2>Reference</h2> </li>
-                    <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
-                    <a href="effect-list/"> <li>Effect List</li> </a>
+                    <a href="module-panel/"><li>Module Panel</li></a>
+                    <a href="edit-settings/"><li>Edit Settings</li></a>
+                    <a href="frames-panel/"><li>Frames Panel</li></a>
+                    <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="instrument-bank/"><li>Instrument Bank</li></a>
+                    <a href="instrument-editor/"><li>Instrument Editor</li></a>
+                    <a href="pattern-editor/"><li>Pattern Editor</li></a>
+                    <a href="preferences/"><li>Preferences</li></a>
+                    <a class="selected" href="visualizer-mode/"><li>Visualizer Mode</li></a>
+                    <li><h2>Reference</h2></li>
+                    <a href="keyboard-shortcuts/"><li>Keyboard Shortcuts</li></a>
+                    <a href="effect-list/"><li>Effect List</li></a>
                 </ul>
             </aside>
             <article>
@@ -40,7 +40,8 @@
                 <img
                     src="visualizer-mode/visualizer_mode.png   "
                     title="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view."
-                    alt="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view." />
+                    alt="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view."
+                />
                 <p>The visualizer has 3 views on one screen.</p>
                 <ul>
                     <li>
@@ -83,7 +84,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    WaveTracker is Copyright © 2024 squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
                     <a href="https://eliasananiadis.com">Personal site</a>
                 </footer>
